alter button tabela categorias

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,8 +51,8 @@
     </table>
 
 
-    <!-- Função para adicionar um novo contato à tabela-->
-    <!-- <script>
+    
+     <script>
 function adicionarContato() {
     let nome = document.getElementById("nome").value;
     let email = document.getElementById("email").value;
@@ -95,8 +95,8 @@ function pesquisarContato() {
         }
     }
 }
-    </script> -->
-    <a href="categorias.html">2</a>
+    </script> 
+    <button type="button"><a class="linkpage2" href="categorias.html">Cadastro de Categorias</a></button>
     <script href="events.js" ></script>
 </body>
 <!-- <footer>
