--- a/frontend/categorias.html
+++ b/frontend/categorias.html
@@ -37,9 +37,25 @@
             <!-- Linhas da tabela de contatos serão adicionadas aqui -->
         </tbody>
     </table>
-<a href="index.html">1</a>
+    <button><a class="linkpage1" href="index.html">Cadastro de Contatos</a></button>
+
 </body>
-<!-- <footer>
-    <h3 class="footer">Direitos reservados, Farias Corporation</h3>
-</footer> -->
+<script>
+    function adicionarContato() {
+    let nome = document.getElementById("nome").value;
+    let categoria = document.getElementById("categoria").value;
+
+    let table = document.getElementById("contatos-table").getElementsByTagName('tbody')[0];
+    let newRow = table.insertRow(table.rows.length);
+    let cell1 = newRow.insertCell(0);
+    let cell2 = newRow.insertCell(1);
+
+    cell1.innerHTML = nome;
+    cell2.innerHTML = categoria;
+
+    // Limpar o formulário após adicionar o contato
+    document.getElementById("nome").value = "";
+    document.getElementById("categoria").value = "";
+}
+</script>
 </html>
