lista de contatos feita

--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -8,5 +8,48 @@
 </head>
 <body>
     <h1>Lista de Contatos</h1>
+
+    <div id="consulta-form">
+        <ul class="nome-list">
+            <li>
+                <span class="nome"></span>
+                <button class="editar">Editar</button>
+                <button class="excluir">Excluir</button>
+            </li>
+            <li>
+                <span class="nome"></span>
+                <button class="editar">Editar</button>
+                <button class="excluir">Excluir</button>
+            </li>
+            <li>
+                <span class="nome"></span>
+                <button class="editar">Editar</button>
+                <button class="excluir">Excluir</button>
+            </li>
+            <li>
+                <span class="nome"></span>
+                <button class="editar">Editar</button>
+                <button class="excluir">Excluir</button>
+            </li>
+            <li>
+                <span class="nome"></span>
+                <button class="editar">Editar</button>
+                <button class="excluir">Excluir</button>
+            </li>
+            <li>
+                <span class="nome"></span>
+                <button class="editar">Editar</button>
+                <button class="excluir">Excluir</button>
+            </li>
+            <li>
+                <span class="nome"></span>
+                <button class="editar">Editar</button>
+                <button class="excluir">Excluir</button>
+            </li>
+        </ul>
+    </div>
+</body>
+</html>
+
 </body>
 </html>
