--- a/frontend/categorias.html
+++ b/frontend/categorias.html
@@ -37,7 +37,7 @@
             <!-- Linhas da tabela de contatos serão adicionadas aqui -->
         </tbody>
     </table>
-    <button><a class="linkpage1" href="index.html">Cadastro de Contatos</a></button>
+    <button><a href="index.html">Cadastro de Contatos</a></button>
 
 </body>
 <script>
