--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,9 @@
             <!-- Linhas da tabela de contatos serão adicionadas aqui -->
         </tbody>
     </table>
-
+    
+    <button><a href="categorias.html">Cadastro de Categorias</a></button>
+    
     <script>
       // Função para adicionar um novo contato à tabela
 function adicionarContato() {
@@ -99,5 +101,6 @@ function pesquisarContato() {
 }
 
     </script>
+
 </body>
 </html>
