--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -56,6 +56,7 @@
         
         <ul class="pagination">
           <li><a href="index.html">«</a></li>
+          <li><a class="active" href="../category/categorias.html">1</a></li>
           <li><a class="active" href="../category/categorias.html">2</a></li>
           <li><a href="../category/categorias.html">»</a></li>
         </ul>
