--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -43,7 +43,7 @@
                 <th>Email</th>
                 <th>Telefone</th>
                 <th>Categoria</th>
-                <th>Ações</th>
+                <th class="acoes">Ações</th>
             </tr>
         </thead>
         <tbody>
