--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -61,6 +61,6 @@
           <li><a href="../category/categorias.html">»</a></li>
         </ul>
 
-<script src="script.js"></script>
+<script src="category.js"></script>
 </body>
 </html>
