botoes todos ok

--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -12,7 +12,7 @@
 
     <!-- add contatos -->
     <div id="register-contacts">
-        <h2>Faça seu Cadastro:</h2>
+        <h2>Faça seu Cadastro</h2>
 
         <label for="nome">Nome:</label>
         <input type="text" id="nome" required placeholder="Digite o nome"><br>
@@ -57,7 +57,7 @@
         <ul class="pagination">
          
           <li><a class="active" href="../category/categorias.html">2</a></li>
-          <li><a href="../category/categorias.html">»</a></li>
+          <li><a class="seta" href="../category/categorias.html">»</a></li>
         </ul>
 
 <script src="script.js"></script>
