--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -26,12 +26,12 @@
         <input type="tel" id="telefone" required placeholder="Ex: (85)912345678"><br>
 
         <div class="container">
-            <select id="categoria">
-              <option value="facebook">Facebook</option>
-              <option value="instagram">Instagram</option>
-              <option value="tiktok">Tik-Tok</option>
-              <option value="twitter">Twitter</option>
-              <option value="telegram">Telegram</option>
+            <select class="categoria" id="categoria">
+              <option value="1">Telegram</option>
+              <option value="2">Facebook</option>
+              <option value="3">Instagram</option>
+              <option value="4">Tik-Tok</option>
+              <option value="5">Twitter</option>
             </select>
           </div>
 <br>
