criaçao de funçao para alimentar options com categorias

--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -25,14 +25,14 @@
         <label for="telefone">Telefone:</label>
         <input type="tel" id="telefone" required placeholder="Ex: (85)912345678"><br>
 
-        <div class="container">
-            <select class="categoria" id="categoria">
-               <option value="1">Telegram</option>
-                <option value="2">Facebook</option>
-                <option value="3">Instagram</option>
-                <option value="4">Tik-Tok</option>
-                <option value="5">Twitter</option> 
+        <div class="selectCategorias">
+            <select class="categoria" id="selectCategorias">
+                
             </select>
+
+
+
+
           </div>
 <br>
         <button onclick="adicionarContato()">Adicionar Contato</button>
