--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -25,14 +25,9 @@
         <label for="telefone">Telefone:</label>
         <input type="tel" id="telefone" required placeholder="Ex: (85)912345678"><br>
 
-        <div class="selectCategorias">
-            <select class="categoria" id="selectCategorias">
-                
+        <div class="Categorias">
+            <select id="selectCategorias">
             </select>
-
-
-
-
           </div>
 <br>
         <button onclick="adicionarContato()">Adicionar Contato</button>
