css do select de categorias

--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -26,8 +26,7 @@
         <input type="tel" id="telefone" required placeholder="Ex: (85)912345678"><br>
 
         <div class="Categorias">
-            <select class="categoria" id="categoria">
-                
+            <select id="categoria"> 
             </select>
           </div>
 <br>
