criado funçao para o botao cancelar

--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -31,7 +31,7 @@
           </div>
 <br>
         <button onclick="adicionarContato()">Adicionar Contato</button>
-        <button id="cancelar-edicao">Cancelar</button>
+        <button  id="cancelar-edicao">Cancelar</button>
     </div>
 
     <div id="consult-contacts">
@@ -62,8 +62,8 @@
 
         <ul class="pagination">
 
-            <li><a class="active" href="../category/categorias.html">2</a></li>
-            <li><a class="seta" href="../category/categorias.html">»</a></li>
+            <li><a target="_self" class="active" href="../category/categorias.html">2</a></li>
+            <li><a target="_self" class="seta" href="../category/categorias.html">»</a></li>
         </ul>
 
         <script src="script.js"></script>
