--- a/frontend/contacts/index.html
+++ b/frontend/contacts/index.html
@@ -7,6 +7,8 @@
     <title>Tabela de Contatos</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
 <body>
@@ -68,5 +70,16 @@
 
         <script src="script.js"></script>
     </body>
+    <br><br><br><br><br><br><br>
 
+    <footer class="footer">
+        <div id="copyright">
+            &copy; DIREITOS RESERVADOS  <a href="https://www.aspec.com.br/">SOBRE NÓS</a> 
+            <span class="spacer"></span>
+            <a href="https://www.aspec.com.br/" target="_blank"><i class="fa fa-whatsapp"></i></a>
+        </div>
+       
+    </footer>
+    
+   
 </html>
