--- a/frontend/contacts/contacts.html
+++ b/frontend/contacts/contacts.html
@@ -15,9 +15,8 @@
     <nav class="navbar">
       <h1 class="title">Tabela de Contatos</h1>
     </nav>
-      <div id="register-contacts">
-
-        <h2>Faça seu Cadastro</h2>
+    <div id="register-contacts">
+      <h2>Faça seu Cadastro</h2>
 
       <label for="nome">Nome:</label>
       <input type="text" id="nome" required placeholder="Digite o nome" />
@@ -27,13 +26,15 @@
         type="email"
         id="email"
         required
-        placeholder="Ex: teste@gmail.com"/>
+        placeholder="Ex: teste@gmail.com"
+      />
       <label for="telefone">Telefone:</label>
       <input
         type="tel"
         id="telefone"
         required
-        placeholder="Ex: (85)912345678"/>
+        placeholder="Ex: (85)912345678"
+      />
       <div class="Categorias">
         <select id="categoria"></select>
       </div>
@@ -43,7 +44,7 @@
     </div>
     <div id="consult-contacts">
       <h2>Consulte seu Cadastro</h2>
-      <input type="text" id="pesquisa" placeholder="Digite o nome"/>
+      <input type="text" id="pesquisa" placeholder="Digite o nome" />
       <button onclick="pesquisarContato()">Pesquisar</button>
     </div>
     <table id="result-contacts">
@@ -56,21 +57,22 @@
           <th class="acoes">Ações</th>
         </tr>
       </thead>
-      <tbody>
-      </tbody>
+      <tbody></tbody>
     </table>
-    <button onclick="categoryPage()" class="alterPage">Tabela de Categorias</button>
+    <button onclick="categoryPage()" class="alterPage">
+      Tabela de Categorias
+    </button>
     <!-- <button class="alterPage">Tabela de Categorias</button> -->
-      <footer class="footer">
-        <div id="copyright">
-          &copy; DIREITOS RESERVADOS
-          <a href="https://github.com/SheltonFarias">SOBRE NÓS</a>
-          <span class="spacer"></span>
-          <a href="https://www.aspec.com.br/" target="_blank"
-          ><i class="fa fa-whatsapp"></i
-            ></a>
-          </div>
-        </footer>
+    <footer class="footer">
+      <div id="copyright">
+        &copy; DIREITOS RESERVADOS
+        <a href="https://github.com/SheltonFarias">SOBRE NÓS</a>
+        <span class="spacer"></span>
+        <a href="https://www.aspec.com.br/" target="_blank">
+          <i class="bi bi-airplane"></i>
+        </a>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
