--- a/frontend/contacts/contacts.html
+++ b/frontend/contacts/contacts.html
@@ -62,15 +62,13 @@
     <button onclick="categoryPage()" class="alterPage">
       Tabela de Categorias
     </button>
-    <!-- <button class="alterPage">Tabela de Categorias</button> -->
     <footer class="footer">
       <div id="copyright">
         &copy; DIREITOS RESERVADOS
         <a href="https://github.com/SheltonFarias">SOBRE NÓS</a>
-        <span class="spacer"></span>
-        <a href="https://www.aspec.com.br/" target="_blank">
-          <i class="bi bi-airplane"></i>
-        </a>
+      </div>
+      <div>
+        <p class="redeSocial">teste teste</p>
       </div>
     </footer>
     <script src="script.js"></script>
