--- a/frontend/contacts/contacts.html
+++ b/frontend/contacts/contacts.html
@@ -16,36 +16,38 @@
         <nav class="navbar">
           <h1 class="title">Tabela de Contatos</h1>
         </nav>
-        <div id="register-contacts">
-          <h2>Faça seu Cadastro</h2>
-          <label for="nome">Nome:</label>
-          <input type="text" id="nome" required placeholder="Digite o nome" />
-          <label for="email">Email:</label>
-          <input
-            type="email"
-            id="email"
-            required
-            placeholder="Ex: teste@gmail.com"
-          />
-          <label for="telefone">Telefone:</label>
-          <input
-            type="tel"
-            id="telefone"
-            required
-            placeholder="Ex: (85)912345678"
-          />
-          <div class="Categorias">
-            <select id="categoria"></select>
+        <article class="modal">
+          <div id="register-contacts">
+            <h2>Faça seu Cadastro</h2>
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" required placeholder="Digite o nome" />
+            <label for="email">Email:</label>
+            <input
+              type="email"
+              id="email"
+              required
+              placeholder="Ex: teste@gmail.com"
+            />
+            <label for="telefone">Telefone:</label>
+            <input
+              type="tel"
+              id="telefone"
+              required
+              placeholder="Ex: (85)912345678"
+            />
+            <div class="Categorias">
+              <select id="categoria"></select>
+            </div>
+            <br />
+            <button onclick="adicionarContato()">Adicionar Contato</button>
+            <button id="cancelar-edicao">Cancelar</button>
           </div>
-          <br />
-          <button onclick="adicionarContato()">Adicionar Contato</button>
-          <button id="cancelar-edicao">Cancelar</button>
-        </div>
-        <div id="consult-contacts">
-          <h2>Consulte seu Cadastro</h2>
-          <input type="text" id="pesquisa" placeholder="Digite o nome" />
-          <button onclick="pesquisarContato()">Pesquisar</button>
-        </div>
+          <div id="consult-contacts">
+            <h2>Consulte seu Cadastro</h2>
+            <input type="text" id="pesquisa" placeholder="Digite o nome" />
+            <button onclick="pesquisarContato()">Pesquisar</button>
+          </div>
+        </article>
         <div>
           <table id="result-contacts">
             <thead>
@@ -64,18 +66,21 @@
         </div>
         <div>
           <ul class="alterPage">
-            <li><a href="../category/category.html">Tabela de Categorias</a></li>
+            <li>
+              <a href="../category/category.html">Tabela de Categorias</a>
+            </li>
           </ul>
         </div>
       </div>
-      <footer class="footer">
-        <div id="copyright">
-          &copy; DIREITOS RESERVADOS
+      <footer >
+        <ul class="footer">
+          <li>&copy; DIREITOS RESERVADOS</li>
+          <li><a href="https://github.com/SheltonFarias">SOBRE NÓS</a></li>
+          <li>teste teste</li>
+        </ul>
+          <!-- <p>&copy; DIREITOS RESERVADOS</p>
           <a href="https://github.com/SheltonFarias">SOBRE NÓS</a>
-        </div>
-        <div>
-          <p class="redeSocial">teste teste</p>
-        </div>
+          <p class="redeSocial">teste teste</p> -->
       </footer>
     </div>
     <script src="script.js"></script>
