style aplication for login

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="style/styles.css">
-</head>
-<body>
-  <main>
-    <h1>Tela de login</h1>
-  </main>
-</body>
-<script src="script.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="style/styles.css" />
+  </head>
+  <body>
+    <main>
+      <div class="login">
+        <h1 class="title-login">Login</h1>
+        <div class="modal-login">
+          <label for="name">Nome</label>
+          <input placeholder="Digite seu nome" type="text" id="name" required />
+          <label class="password" for="password">Senha</label>
+          <input placeholder="Digite sua senha" type="password" id="password"  required/>
+          <input class="btn" type="submit" value="Entrar" />
+          <div class="help"> 
+            <span><a href="">Esqueceu a senha</a></span>
+            <span><a href="">Registre-se</a></span>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+  <script src="script.js"></script>
 </html>
