--- a/frontend/src/login/login/index.html
+++ b/frontend/src/login/login/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="style/styles.css" />
+    <link rel="stylesheet" href="../../style/login.css" />
   </head>
   <body>
     <main>
       <div class="login">
-        <h1 class="title-login">Login</h1>
+        <h1 class="title-login">Faça seu Login</h1>
         <div class="modal-login">
           <label for="name">Nome</label>
           <input placeholder="Digite seu nome" type="text" id="name" required />
@@ -18,7 +18,7 @@
           <input class="btn" type="submit" value="Entrar" />
           <div class="help"> 
             <span><a href="">Esqueceu a senha</a></span>
-            <span><a href="">Registre-se</a></span>
+            <span><a href="../register/index.html">Registre-se</a></span>
           </div>
         </div>
       </div>
