--- a/frontend/contacts/contacts.html
+++ b/frontend/contacts/contacts.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    
   </head>
   <body>
     <main>
@@ -100,6 +101,7 @@
         </div>
       </div>
       <footer class="footer">
+        <a href="../login/index.html">Login</a>
         <ul class="teste">
           <li>&copy; Desensolvido por Shelton Farias</li>
         </ul>
