--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -4,12 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="style/styles.css">
+  <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-  <main>
-    <h1>Tela de login</h1>
-  </main>
+<div class="flex items-center justify-center h-screen bg-white">
+  <div class="login-container">
+    <h2 class="title">Login</h2>
+    <form class="form">
+      <div class="form-group">
+        <label for="email" class="form-label">Email</label>
+        <input
+          class="form-input"
+          id="email"
+          placeholder="example@email.com"
+          type="email"
+        />
+      </div>
+      <div class="form-group">
+        <label for="password" class="form-label">Password</label>
+        <input
+          class="form-input"
+          id="password"
+          placeholder="********"
+          type="password"
+        />
+      </div>
+      <div class="form-footer">
+        <a class="forgot-password" href="#">
+          Forgot password?
+        </a>
+      </div>
+    </form>
+  </div>
+</div>
 </body>
 <script src="script.js"></script>
 </html>
