--- a/frontend/src/pages/register/index.html
+++ b/frontend/src/pages/register/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="../../style/login.css" />
+    <link rel="stylesheet" href="../../style/style.css" />
   </head>
   <body>
     <main>
