add style navbar

--- a/frontend/src/pages/contacts/contacts.html
+++ b/frontend/src/pages/contacts/contacts.html
@@ -93,7 +93,9 @@
           <div>
             <ul class="alterPage">
               <li>
-                <a class="btn-page" href="../category/category.html">Tabela de Categorias</a>
+                <a class="btn-page" href="../category/category.html"
+                  >Tabela de Categorias</a
+                >
               </li>
             </ul>
           </div>
@@ -119,6 +121,6 @@
         </ul>
       </footer>
     </main>
-    <script src="script.js"></script>
+    <script src="../../js/contacts.js"></script>
   </body>
 </html>
